--- a/src/main/resources/presentation/primary.fxml
+++ b/src/main/resources/presentation/primary.fxml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="712.0" prefWidth="1061.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.PrimaryController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="712.0" prefWidth="1061.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.PrimaryController">
   <tabs>
     <Tab text="Clientes">
       <content>
@@ -27,15 +30,16 @@
                         <TableColumn fx:id="col_birthDate" prefWidth="214.0" text="Fecha de nacimiento" />
                     </columns>
                   </TableView>
-                  <Button fx:id="bt_actualizar" layoutX="446.0" layoutY="602.0" mnemonicParsing="false" onAction="#onClick_bt_actualizar" text="Actualizar" />
-                  <Button fx:id="bt_aniadir" layoutX="365.0" layoutY="602.0" mnemonicParsing="false" onAction="#onClick_bt_aniadir" text="Añadir" />
-                  <Button fx:id="bt_eliminar" layoutX="549.0" layoutY="602.0" mnemonicParsing="false" onAction="#onClick_bt_eliminar" text="Eliminar" />
+                  <Button fx:id="bt_actualizar" layoutX="497.0" layoutY="596.0" mnemonicParsing="false" onAction="#onClick_bt_actualizar" text="Actualizar" />
+                  <Button fx:id="bt_aniadir" layoutX="430.0" layoutY="596.0" mnemonicParsing="false" onAction="#onClick_bt_aniadir" text="Añadir" />
+                  <Button fx:id="bt_eliminar" layoutX="582.0" layoutY="596.0" mnemonicParsing="false" onAction="#onClick_bt_eliminar" text="Eliminar" />
                   <TextField fx:id="tf_customerName" layoutX="31.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" />
                   <TextField fx:id="tf_idCard" layoutX="190.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" />
                   <TextField fx:id="tf_creditLimit" layoutX="355.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" />
                   <TextField fx:id="tf_phoneNumber" layoutX="524.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" />
-                  <TextField fx:id="tf_customerEmail" layoutX="686.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0"/>
+                  <TextField fx:id="tf_customerEmail" layoutX="686.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" />
                   <TextField fx:id="tf_birthDate" layoutX="850.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" />
+                  <Button fx:id="bt_limpiar" layoutX="479.0" layoutY="638.0" mnemonicParsing="false" onAction="#onClick_bt_limpiar" text="Limpiar Registro" />
                </children></AnchorPane>
       </content>
     </Tab>
