--- a/src/main/resources/presentation/primary.fxml
+++ b/src/main/resources/presentation/primary.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -14,7 +18,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="712.0" prefWidth="1061.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.PrimaryController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="712.0" prefWidth="1061.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentation.PrimaryController">
   <tabs>
     <Tab text="Clientes">
       <content>
@@ -61,7 +65,7 @@
                   <Button fx:id="deleteProductBtn" layoutX="510.0" layoutY="602.0" mnemonicParsing="false" onAction="#onActionDeleteProductBtn" text="Eliminar" />
                   <TextField fx:id="productCodeField" layoutX="31.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Codigo Producto" />
                   <TextField fx:id="productNameField" layoutX="190.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Producto" />
-                  <TextField layoutX="354.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Descripción" />
+                  <TextField fx:id="productDescriptionField" layoutX="354.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Descripción" />
                   <TextField fx:id="quantityInStockField" layoutX="524.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Stock" />
                   <TextField fx:id="buyPriceField" layoutX="685.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Precio compra" />
                </children>
