--- a/src/main/resources/presentation/primary.fxml
+++ b/src/main/resources/presentation/primary.fxml
@@ -51,7 +51,7 @@
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="1039.0">
                <children>
-                  <TableView fx:id="productsTableView" layoutX="31.0" layoutY="37.0" prefHeight="459.0" prefWidth="986.0">
+                  <TableView fx:id="productsTableView" layoutX="31.0" layoutY="37.0" onMouseClicked="#handleProductMouseCicked" prefHeight="459.0" prefWidth="986.0">
                      <columns>
                         <TableColumn fx:id="colProductCode" prefWidth="171.0" text="Codigo Producto" />
                         <TableColumn fx:id="colProductName" prefWidth="187.0" text="Producto" />
@@ -60,14 +60,15 @@
                         <TableColumn fx:id="colBuyPrice" prefWidth="263.0" text="Precio compra" />
                      </columns>
                   </TableView>
-                  <Button fx:id="updateProductBtn" layoutX="278.0" layoutY="602.0" mnemonicParsing="false" onAction="#onActionUpdateProductBtn" text="Actualizar" />
-                  <Button fx:id="addNewProductBtn" layoutX="407.0" layoutY="602.0" mnemonicParsing="false" onAction="#onActionAddNewProductBtn" text="Añadir" />
-                  <Button fx:id="deleteProductBtn" layoutX="510.0" layoutY="602.0" mnemonicParsing="false" onAction="#onActionDeleteProductBtn" text="Eliminar" />
-                  <TextField fx:id="productCodeField" layoutX="31.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Codigo Producto" />
-                  <TextField fx:id="productNameField" layoutX="190.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Producto" />
-                  <TextField fx:id="productDescriptionField" layoutX="354.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Descripción" />
-                  <TextField fx:id="quantityInStockField" layoutX="524.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Stock" />
-                  <TextField fx:id="buyPriceField" layoutX="685.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Precio compra" />
+                  <Button fx:id="updateProductBtn" layoutX="386.0" layoutY="590.0" mnemonicParsing="false" onAction="#onActionUpdateProductBtn" text="Actualizar" />
+                  <Button fx:id="addNewProductBtn" layoutX="491.0" layoutY="590.0" mnemonicParsing="false" onAction="#onActionAddNewProductBtn" text="Añadir" />
+                  <Button fx:id="deleteProductBtn" layoutX="575.0" layoutY="590.0" mnemonicParsing="false" onAction="#onActionDeleteProductBtn" text="Eliminar" />
+                  <TextField fx:id="productCodeField" disable="true" layoutX="89.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Codigo Producto" />
+                  <TextField fx:id="productNameField" layoutX="263.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Producto" />
+                  <TextField fx:id="productDescriptionField" layoutX="441.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Descripción" />
+                  <TextField fx:id="quantityInStockField" layoutX="618.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Stock" />
+                  <TextField fx:id="buyPriceField" layoutX="797.0" layoutY="532.0" prefHeight="40.0" prefWidth="150.0" promptText="Precio compra" />
+                  <Button fx:id="cleanFieldsBtn" layoutX="466.0" layoutY="631.0" mnemonicParsing="false" onAction="#onActionCleanFieldsBtn" text="Limpiar campos" />
                </children>
             </AnchorPane>
          </content>
