--- a/src/main/resources/presentation/primary.fxml
+++ b/src/main/resources/presentation/primary.fxml
@@ -118,9 +118,9 @@
                   </TableView>
                   <Button fx:id="addProductBtn" layoutX="669.0" layoutY="129.0" mnemonicParsing="false" onAction="#onActionAddProductBtn" prefHeight="31.0" prefWidth="138.0" text="Añadir producto" />
                   <Button fx:id="orderDetailDeleteButton" layoutX="577.0" layoutY="601.0" mnemonicParsing="false" onAction="#onActionOrderDetailDeleteButton" prefHeight="27.0" prefWidth="91.0" text="Eliminar" />
-                  <ComboBox fx:id="productComboBox" layoutX="37.0" layoutY="129.0" onAction="#onActionProductComboBox" prefWidth="150.0" promptText="Producto" />
-                  <TextField fx:id="productQuantity" layoutX="244.0" layoutY="129.0" onAction="#onActionProductQuantity" prefHeight="30.0" prefWidth="164.0" promptText="Cantidad" />
-                  <TextField fx:id="priceEach" layoutX="458.0" layoutY="129.0" onAction="#onActionPriceEach" prefHeight="30.0" prefWidth="164.0" promptText="PVP unitario" />
+                  <ComboBox fx:id="productComboBox" layoutX="37.0" layoutY="129.0" prefWidth="150.0" promptText="Producto" />
+                  <TextField fx:id="productQuantity" layoutX="244.0" layoutY="129.0" prefHeight="30.0" prefWidth="164.0" promptText="Cantidad" />
+                  <TextField fx:id="priceEach" layoutX="458.0" layoutY="129.0" prefHeight="30.0" prefWidth="164.0" promptText="PVP unitario" />
                   <Separator layoutX="37.0" layoutY="83.0" prefHeight="24.0" prefWidth="988.0" />
                   <Button fx:id="orderDetailUpdateBtn" layoutX="393.0" layoutY="601.0" mnemonicParsing="false" onAction="#onActionOrderDetailUpdateBtn" prefHeight="31.0" prefWidth="92.0" text="Actualizar" />
                   <Label fx:id="openOrder" layoutX="478.0" layoutY="50.0" text="Pedido cargado" />
