--- a/src/main/resources/presentation/primary.fxml
+++ b/src/main/resources/presentation/primary.fxml
@@ -34,9 +34,9 @@
                         <TableColumn fx:id="col_birthDate" prefWidth="214.0" text="Fecha de nacimiento" />
                     </columns>
                   </TableView>
-                  <Button fx:id="bt_actualizar" layoutX="497.0" layoutY="596.0" mnemonicParsing="false" onAction="#onClick_bt_actualizar" text="Actualizar" />
+                  <Button fx:id="bt_actualizar" disable="true" layoutX="497.0" layoutY="596.0" mnemonicParsing="false" onAction="#onClick_bt_actualizar" text="Actualizar" />
                   <Button fx:id="bt_aniadir" layoutX="430.0" layoutY="596.0" mnemonicParsing="false" onAction="#onClick_bt_aniadir" text="Añadir" />
-                  <Button fx:id="bt_eliminar" layoutX="582.0" layoutY="596.0" mnemonicParsing="false" onAction="#onClick_bt_eliminar" text="Eliminar" />
+                  <Button fx:id="bt_eliminar" disable="true" layoutX="582.0" layoutY="596.0" mnemonicParsing="false" onAction="#onClick_bt_eliminar" text="Eliminar" />
                   <TextField fx:id="tf_customerName" layoutX="31.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" promptText="Nombre" />
                   <TextField fx:id="tf_idCard" layoutX="190.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" promptText="DNI" />
                   <TextField fx:id="tf_creditLimit" layoutX="355.0" layoutY="520.0" prefHeight="47.0" prefWidth="149.0" promptText="Limite de Credito" />
